--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.0",
     "@fortawesome/free-solid-svg-icons": "^5.10.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "animate.css": "^3.7.2",
     "apollo-boost": "^0.4.4",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
