--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "exif-js": "^2.3.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
