--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "photo-lib-web",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "animate.css": "^3.7.2",
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
@@ -15,35 +10,23 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
-    "node-sass": "^4.12.0",
-    "popper": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-apollo": "^3.1.1",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-bootstrap-toggle": "^2.3.1",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.9.0",
-    "react-fontawesome": "^1.6.1",
     "react-hotkeys": "^2.0.0",
-    "react-image-gallery": "^0.9.1",
     "react-intersection-observer": "^8.24.2",
     "react-jvectormap": "^0.0.12",
-    "react-load-image": "^0.1.7",
     "react-loading": "^2.0.3",
     "react-native": "^0.61.1",
-    "react-native-fit-image": "^1.5.4",
     "react-redux": "^7.1.1",
-    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.0",
-    "react-router-redux": "^4.0.8",
     "react-scripts": "^3.1.2",
-    "react-simple-maps": "^0.12.1",
-    "react-spinners": "^0.6.1",
+    "react-swipeable": "^5.4.0",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.1",
-    "redux-saga": "^1.1.1",
-    "resolve-url-loader": "^3.1.0"
+    "redux-saga": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,10 +45,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "bootstrap-loader": "^3.0.4",
     "cross-env": "^6.0.0",
-    "eslint-plugin-react": "^7.14.3",
-    "jquery": "^3.4.1",
-    "tether": "^1.4.7"
+    "eslint-plugin-react": "^7.14.3"
   }
 }
