--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-apollo": "^3.1.1",
@@ -29,6 +30,8 @@
     "redux-saga": "^1.1.1"
   },
   "scripts": {
+    "build-css": "node-sass --include-path ./src --include-path  ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:prod": "cross-env REACT_APP_ENV=production npm run build",
