--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
