--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.0",
+    "password-validator": "^5.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^3.28.11",
     "react-hotkeys": "^2.0.0",
     "react-intersection-observer": "^8.25.1",
     "react-jvectormap": "^0.0.12",
