--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-apollo": "^3.1.3",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.0.7",
     "react-hook-form": "^3.28.11",
     "react-hotkeys": "^2.0.0",
     "react-intersection-observer": "^8.25.1",
