--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"eslint.alwaysShowStatus": true,
 	"eslint.autoFixOnSave": true,
-	"eslint.provideLintTask": true
+	"eslint.provideLintTask": true,
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": true
+	}
 }
