--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "password-validator": "^5.0.3",
     "prop-types": "^15.7.2",
